--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,6 +4,7 @@
     <h1>todos</h1>
     <form id="new-form">
       <input type="text" class="new-todo" />
+      </form>
   </header>
 
   <section class="main">
@@ -21,7 +22,7 @@
       var textbox = $('.new-todo');
       console.log("Task: ", textbox.val());
     });
-    
+
     // The taskHtml method takes in a JavaScript representation
     // of the task and produces an HTML representation using
     // <li> tags
