--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
   <header class="header">
     <h1>todos</h1>
     <form id="new-form">
-      <input type="text" class="new-todo" />
+      <input type="text" class="new-todo" placeholder="What needs to be done?" />
       </form>
   </header>
 
@@ -13,5 +13,11 @@
     </ul>
 
   </section>
+</section>
+
+<section class="author">
+  A <%= link_to "todo-mvc", "http://todomvc.com" %>
+  application, built by
+  <%= link_to "David Jacobs", "https://github.com/djacobs74" %>
 </section>
 
